; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_utils.c_dump_restore.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_utils.c_dump_restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, %struct.TYPE_2__* }

@_restore_info_n = common dso_local global i64 0, align 8
@_restore_info_maxn = common dso_local global i64 0, align 8
@_restore_info = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dump_restore(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca %struct.TYPE_2__*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = bitcast i32* %7 to %struct.TYPE_2__**
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  store %struct.TYPE_2__* %9, %struct.TYPE_2__** %5, align 8
  %10 = load i64, i64* @_restore_info_n, align 8
  %11 = load i64, i64* @_restore_info_maxn, align 8
  %12 = icmp slt i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @CONV_ID(i32 %17)
  %19 = load i32*, i32** @_restore_info, align 8
  %20 = load i64, i64* @_restore_info_n, align 8
  %21 = add nsw i64 %20, 1
  store i64 %21, i64* @_restore_info_n, align 8
  %22 = getelementptr inbounds i32, i32* %19, i64 %20
  store i32 %18, i32* %22, align 4
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  store %struct.TYPE_2__* %23, %struct.TYPE_2__** %6, align 8
  br label %24

24:                                               ; preds = %30, %2
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 1
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %29 = icmp ne %struct.TYPE_2__* %27, %28
  br i1 %29, label %30, label %46

30:                                               ; preds = %24
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  store %struct.TYPE_2__* %33, %struct.TYPE_2__** %5, align 8
  %34 = load i64, i64* @_restore_info_n, align 8
  %35 = load i64, i64* @_restore_info_maxn, align 8
  %36 = icmp slt i64 %34, %35
  %37 = zext i1 %36 to i32
  %38 = call i32 @assert(i32 %37)
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load i32*, i32** @_restore_info, align 8
  %43 = load i64, i64* @_restore_info_n, align 8
  %44 = add nsw i64 %43, 1
  store i64 %44, i64* @_restore_info_n, align 8
  %45 = getelementptr inbounds i32, i32* %42, i64 %43
  store i32 %41, i32* %45, align 4
  br label %24

46:                                               ; preds = %24
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @CONV_ID(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
